@@ -50,7 +50,7 @@ public class LotsOfClasses {
         opts.addSuffix("-Xlog:hashtables");
         opts.addSuffix("-Xmx500m");
         opts.addSuffix("-Xlog:gc+region+cds");
-        opts.addSuffix("-Xlog:cds=debug");  // test detailed metadata info printing
+        opts.addSuffix("-Xlog:gc+region=trace");
 
         OutputAnalyzer out = CDSTestUtils.createArchive(opts);
         CDSTestUtils.checkDump(out);
